Write HTML and linked links.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Excursion</title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <div>
+      <h1>Discover hidden places in the world around you</h1>
+      <a class="link">Download Excursion (coming soon!)</a>
+      <p><link href="/resources/excursion.mp4"/>
+    </div>
+
+    <div>
+      <h2>Your personal travel guide</h2>
+      <p class"text">Excursion remembers places you like, and recommends new points 
+        of interest around you<p>
+      <p><link href="/resources/camp.jpg"/></p>
+    </div>
+
+    <div>
+      <p><link href="/resources/phone.png"/></p>
+      <h2>Coming soon for iPHone and Android</h2>
+      <a class="link">Download Excursion (coming soon!)</a>
+    </div>
+
+    <footer>
+      <p>&copy;Excursion</p>
+    </footer>
   </body>
 </html>
