--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="/resources/css/style.css" type="text/css" rel="stylesheet"/>
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet"/>
     <title>Excursion</title>
   </head>
   <body>
     <div>
       <h1>Discover hidden places in the world around you</h1>
       <a class="link">Download Excursion (coming soon!)</a>
-      <p><link href="/resources/excursion.mp4"/>
+      <p><video src="resources/excursion.mp4" autoplay></video></p>
     </div>
 
     <div>
       <h2>Your personal travel guide</h2>
-      <p class"text">Excursion remembers places you like, and recommends new points 
+      <p id="about">Excursion remembers places you like, and recommends new points
         of interest around you<p>
-      <p><link href="/resources/camp.jpg"/></p>
+      <p><img src="resources/camp.jpg"/></p>
     </div>
 
     <div>
-      <p><link href="/resources/phone.png"/></p>
+      <p><img src="resources/phone.png"/></p>
       <h2>Coming soon for iPHone and Android</h2>
       <a class="link">Download Excursion (coming soon!)</a>
     </div>
